# automerge-client-test-rs

./: Cargo.toml  README.md
src/: main.rs
