[package]
name = "automerge-client-test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.9"
automerge_repo = "0.1.0"
autosurgeon = "0.8.3"
futures = "0.3.30"
memory-stats = "1.1.0"
random-string = "1.1.0"
axum = { version = "0.6.18", features = ["ws"], optional = true }
uuid = { version = "1.2.2"}
crossbeam-channel = { version = "0.5.8" }
parking_lot = { version = "0.12.1" }
serde = { version = "1.0.160", features = ["derive"]}
tokio = { version = "1.27", features = ["rt"], optional = true }
tokio-util = { version = "0.7.8", features = ["codec", "net" ], optional = true }
bytes = { version = "1.4.0" }
thiserror = "1.0.38"
minicbor = { version = "0.19.0", features = ["alloc"] }
tungstenite = { version = "0.21", optional = true }
tracing = "0.1.37"
ring = "0.16.20"
hex = "0.4.3"
tempfile = "3.6.0"
bs58 = { version = "0.5.0", features = ["check"] }
time = "0.3.34"
