[package]
name = "automerge-client-test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.9"
automerge_repo = "0.1.0"
autosurgeon = "0.8.3"
futures = "0.3.30"
memory-stats = "1.1.0"
random-string = "1.1.0"
axum = { version = "0.6.18", features = ["ws"], optional = true }
tokio = { version = "1.27", features = ["rt"], optional = true }
time = "0.3.34"
